<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LingosHookAndroidClientActivity!</string>
    <string name="app_name">LingosHook Android Client</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_import">Import</string>
    <string name="title_dir">Directory</string>
    <string name="title_file">File</string>
    <string name="title_import_overwrite">Overwrite</string>
    <string name="title_yes">Next</string>
    <string name="title_no">Try again</string>
    <string name="str_noword">No Word</string>
    <string name="str_score_0">Very easy.</string>
    <string name="str_score_1">I know it.</string>
    <string name="str_score_2">Fuzzy..</string>
    <string name="str_score_3">What\'s it?!</string>
    <string name="menu_score_list">Score List</string>
    <string name="title_score_total">Total Words:</string>
    <string name="title_score_new">New Words:</string>
    <string name="title_score_old">Old Words:</string>
    <string name="set_title_word">Word Preferences</string>
    <string name="set_key_word_numloadnew">setting_key_word_numloadnew</string>
    <string name="set_title_word_numloadnew">New Words Number</string>
    <string name="set_summary_word_numloadnew">Choose the number of new words that loaded when app starts</string>
    <string name="set_key_word_numloadold">setting_key_word_numloadold</string>
    <string name="set_title_word_numloadold">Old Words Number</string>
    <string name="set_summary_word_numloadold">Choose the number of old words that app every loads</string>
    <string name="set_key_word_loadmistake">set_key_word_loadmistake</string>
    <string name="set_title_word_loadmistake">Auto laod words marked \'Try Again\'</string>
    <string name="set_summary_on_word_loadmistake">Loads \'Try Again\' words after finish old/new words</string>
    <string name="set_summary_off_word_loadmistake">Not loads \'Try Again\' words after finish old/new words</string>
    <string name="set_key_word_loadresult">set_key_word_loadresult</string>
    <string name="set_title_word_loadresult">Display Result Data</string>
    <string name="set_summary_on_word_loadresult">Display the result of word after check</string>
    <string name="set_summary_off_word_loadresult">Not display the result of word after check</string>
    <string name="set_key_word_loadspeaker">set_key_word_loadspeaker</string>
    <string name="set_title_word_loadspeaker">Load Speaker</string>
    <string name="set_summary_on_word_loadspeaker">Load speaker when display a word</string>
    <string name="set_summary_off_word_loadspeaker">Not load speaker when display a word</string>
    <string name="set_title_fingerpanel">Finger Panel Preferences</string>
    <string name="set_key_finger_refresh">set_key_finger_refresh</string>
    <string name="set_title_finger_refresh">Automatic Refresh</string>
    <string name="set_key_finger_interval">set_key_finger_interval</string>
    <string name="set_title_finger_interval">Refresh Interval</string>
    <string name="set_key_finger_pencolor">set_key_finger_pencolor</string>
    <string name="set_title_finger_pencolor">Pen Color</string>
    <string name="set_key_finger_penwidth">set_key_finger_penwidth</string>
    <string name="set_title_finger_penwidth">Pen Width</string>
    <string name="str_newword">N:</string>
    <string name="str_oldword">O:</string>
    <string name="str_mistakeword">M:</string>
    <string name="str_version">Version 1.1.1</string>
    <string name="set_summary_finger_refresh">Automate to refresh finger input panel</string>
    <string name="set_summary_finger_interval">Refresh interval of finger panel</string>
    <string name="set_summary_finger_pencolor">Choose pen color of finger panel</string>
    <string name="set_summary_finger_penwidth">Choose pen width of finger panel</string>
    <string name="str_loadmistakeword">Would you like load the words marked \'Try Again\' now?</string>
    <string name="str_nowordindb">No any word in local db, please use \'import\' cmd to load first.</string>
    <string name="str_nomoreword">No more words now.</string> 
	<string name="str_today_nomoreword">No any word need to memory today.</string>    
    <string name="title_ad_version">Domob 3.0.3</string> 
    <string name="title_today">Toady:</string>
    <string name="title_import">Import</string>   
    <string name="title_done">Done</string>
    <string name="str_all_words">All Words</string>
    <string name="str_all_oldwords">All Old Words</string>
    <string name="str_all_newwords">All New Words</string>
    <string name="str_all_wordson">All Words on </string>
    <string name="str_wordindb">Do you REALLY want to overwrite the database?</string>
    <string name="set_title_webview">Web View References</string>
    <string name="set_key_web_clickable">set_key_web_clickable</string>
    <string name="set_title_web_clickable">Enable Web View Click event</string>
    <string name="set_summary_on_web_clickable">Web View is clickable</string>
    <string name="set_summary_off_web_clickable">Web View is NOT clickable</string>
    <string name="title_import_remote">Import Remote File</string>
    <string name="title_import_local">Import Local File</string>
    <string name="title_httpd_comment">Please use the following address to  visit your LAC via WiFi now..</string>
    <string name="str_httpd_importing">Import..</string>
    <string name="str_httpd_importdone">File \'%s\' imported successfully.</string>
    <string name="str_httpd_inputdone">Data inputed successfully..</string>
    <string name="str_httpd_inputfail">Data inputed failed..</string>
    <string name="str_httpd_importfail">File \'%s\' imported failed.</string>
    <string name="title_input_data">Input Single Data</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_word">Word</string>
    <string name="title_symbol">Symbol</string>
    <string name="title_category">Category</string>
    <string name="title_meaning">Meaning</string>
    <string name="title_input">Input</string>
    <string name="str_query_removeword">Sure remove \'%s\'?</string>    
</resources>
